# Rivora-E-Commerce

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml  requirements.txt  template.env
backend/app/: main.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/db/: dependency.py  session.py
backend/app/modules/auth/phone/: utils.py
backend/app/modules/models/: __init__.py  identity_model.py  user_model.py
backend/app/modules/models/auth_model/: identity_model.py  magic_link_model.py  otp_model.py  session_model.py  user_model.py
backend/app/modules/schemas/: auth_providers_schema.py
backend/app/shared/utils/: utilities.py
backend/tests/core/: __init__.py
